--- a/.github/workflows/action1.yaml
+++ b/.github/workflows/action1.yaml
@@ -18,6 +18,7 @@ jobs:
 
                         - name: 'Install Dependencies'
                           run: |
+                                apt-get install unzip
                                 mkdir bin
 
                         - name: 'Install Pre-Commit'
