--- a/.github/workflows/action1.yaml
+++ b/.github/workflows/action1.yaml
@@ -36,30 +36,30 @@ jobs:
                           continue-on-error: true
                           run: |
                                 curl -L "$(curl -s "https://api.github.com/repos/terraform-docs/terraform-docs/releases"/latest | grep -o -E -m 1 "https://.+?-linux-amd64.tar.gz")" > terraform-docs.tgz \
-                                tar -xzf terraform-docs.tgz terraform-docs && rm terraform-docs.tgz && chmod +x terraform-docs
+                                && tar -xzf terraform-docs.tgz terraform-docs && rm terraform-docs.tgz && chmod +x terraform-docs
 
                         
                         - name: 'Install TerraGrunt'
                           working-directory: bin
                           continue-on-error: true
                           run: |
-                                curl -L "$(curl -s "https://api.github.com/repos/gruntwork-io/terragrunt/releases/latest" | grep -o -E -m 1 "https://.+?/terragrunt_linux_amd64")" > terragrunt 
-                                chmod +x terragrunt
+                                curl -L "$(curl -s "https://api.github.com/repos/gruntwork-io/terragrunt/releases/latest" | grep -o -E -m 1 "https://.+?/terragrunt_linux_amd64")" > terragrunt \
+                                && chmod +x terragrunt
 
                         - name: 'Install TerraScan'
                           working-directory: bin
                           continue-on-error: true
                           run: |
-                                curl -L "$(curl -s "https://api.github.com/repos/accurics/terrascan/releases/latest" | grep -o -E -m 1 "https://.+?_Linux_x86_64.tar.gz")" > terrascan.tar.gz 
-                                tar -xzf terrascan.tar.gz terrascan && rm terrascan.tar.gz && 
-                                ./terrascan init
+                                curl -L "$(curl -s "https://api.github.com/repos/accurics/terrascan/releases/latest" | grep -o -E -m 1 "https://.+?_Linux_x86_64.tar.gz")" > terrascan.tar.gz \
+                                && tar -xzf terrascan.tar.gz terrascan && rm terrascan.tar.gz && 
+                                && ./terrascan init
 
                         - name: 'Install TerraformLint'
                           working-directory: bin
                           continue-on-error: true
                           run: |
                                 curl -L "$(curl -s "https://api.github.com/repos/terraform-linters/tflint/releases/latest" | grep -o -E -m 1 "https://.+?_linux_amd64.zip")" > tflint.zip \
-                                unzip tflint.zip && rm tflint.zip
+                                && unzip tflint.zip && rm tflint.zip
 
 
                         - name: 'Install TFSec'
@@ -67,4 +67,4 @@ jobs:
                           continue-on-error: true
                           run: |
                                 curl -L "$(curl -s "https://api.github.com/repos/aquasecurity/tfsec/releases/latest" | grep -o -E -m 1 "https://.+?/tfsec-linux-amd64")" > tfsec \
-                                chmod +x tfsec
+                                && chmod +x tfsec
