--- a/.github/workflows/action1.yaml
+++ b/.github/workflows/action1.yaml
@@ -73,4 +73,5 @@ jobs:
                         - name: 'Add to PATH'
                           run: |
                                 echo "${{ github.workspace }}/bin" >> $GITHUB_PATH \
+                                && echo "$PATH" \
                                 && pre-commit run --all-files
