--- a/.github/workflows/action1.yaml
+++ b/.github/workflows/action1.yaml
@@ -75,6 +75,7 @@ jobs:
                           run: |
                                 echo "$HOME/bin" >> $GITHUB_PATH \
                                 && echo "$PATH"
+                                echo $(ls)
 
                         - name: 'Pre-Commit'
                           run: pre-commit run --all-files
