--- a/.github/workflows/action1.yaml
+++ b/.github/workflows/action1.yaml
@@ -26,17 +26,17 @@ jobs:
                                 mkdir $WRKDIR
 
                         - name: 'Install Pre-Commit'
-                          working-directory: $WRKDIR
+                          working-directory: deps
                           continue-on-error: true
                           run: pip3 install --no-cache-dir pre-commit
 
                         - name: 'Install Checkov'
-                          working-directory: $WRKDIR
+                          working-directory: deps
                           continue-on-error: true
                           run: pip3 install --no-cache-dir checkov 
 
                         - name: 'Install TerraDocs'
-                          working-directory: $WRKDIR
+                          working-directory: deps
                           continue-on-error: true
                           run: |
                                 curl -L "$(curl -s "https://api.github.com/repos/terraform-docs/terraform-docs/releases"/latest | grep -o -E -m 1 "https://.+?-linux-amd64.tar.gz")" > terraform-docs.tgz \
@@ -44,14 +44,14 @@ jobs:
 
                         
                         - name: 'Install TerraGrunt'
-                          working-directory: $WRKDIR
+                          working-directory: deps
                           continue-on-error: true
                           run: |
                                 curl -L "$(curl -s "https://api.github.com/repos/gruntwork-io/terragrunt/releases/latest" | grep -o -E -m 1 "https://.+?/terragrunt_linux_amd64")" > terragrunt \
                                 && chmod +x terragrunt
 
                         - name: 'Install TerraScan'
-                          working-directory: $WRKDIR
+                          working-directory: deps
                           continue-on-error: true
                           run: |
                                 curl -L "$(curl -s "https://api.github.com/repos/accurics/terrascan/releases/latest" | grep -o -E -m 1 "https://.+?_Linux_x86_64.tar.gz")" > terrascan.tar.gz \
@@ -59,7 +59,7 @@ jobs:
                                 && ./terrascan init
 
                         - name: 'Install TerraformLint'
-                          working-directory: $WRKDIR
+                          working-directory: deps
                           continue-on-error: true
                           run: |
                                 curl -L "$(curl -s "https://api.github.com/repos/terraform-linters/tflint/releases/latest" | grep -o -E -m 1 "https://.+?_linux_amd64.zip")" > tflint.zip \
@@ -67,7 +67,7 @@ jobs:
 
 
                         - name: 'Install TFSec'
-                          working-directory: $WRKDIR
+                          working-directory: deps
                           continue-on-error: true
                           run: |
                                 curl -L "$(curl -s "https://api.github.com/repos/aquasecurity/tfsec/releases/latest" | grep -o -E -m 1 "https://.+?/tfsec-linux-amd64")" > tfsec \
