--- a/.github/workflows/action1.yaml
+++ b/.github/workflows/action1.yaml
@@ -82,4 +82,23 @@ jobs:
                                 echo $(ls)
 
                         - name: 'Pre-Commit'
-                          run: pre-commit run --all-files
+                          id: pre-commit
+                          run: |
+                            pre-commit run --all-files | sed 's/\x1b\[[0-9;]*m//g' | tee output.md
+                            output=$(cat output-md)
+                            output="${output//'%'/'%25'}"
+                            output="${output//$'\n'/'%0A'}"
+                            output="${output//$'\r'/'%0D'}"
+                            echo ::set-output name=pre-commit-output::$output
+                          
+                  
+                        - name: Write output for PR
+                          uses: actions/github-script@v4.1.0
+                          with:
+                            script: |
+                              github.issues.createComment({
+                                issue_number: context.issue.number,
+                                owner: context.repo.owner,
+                                repo: context.repo.repo,
+                                body: ${{ steps.pre-commit.outputs.pre-commit-output }}
+                              })
