--- a/.github/workflows/action1.yaml
+++ b/.github/workflows/action1.yaml
@@ -101,5 +101,5 @@ jobs:
                                 issue_number: context.issue.number,
                                 owner: context.repo.owner,
                                 repo: context.repo.repo,
-                                body: ${{ steps.pre-commit.outputs.pre-commit-output }}
+                                body: \`${{ steps.pre-commit.outputs.pre-commit-output }}\`
                               })
